added content to card

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <a href="sass.html">ABOUT</a>
               </li>
               <li>
+                <a href="sass.html">CONTACT</a>
+              </li>
+              <li>
                 <a href="sass.html"><i class="material-icons">search</i></a>
               </li>
             </ul>
@@ -63,8 +66,7 @@
     </header>
 
     <!--Image Background section -->
-
-    <div class="slider">
+    <section class="slider">
       <ul class="slides">
         <li>
           <img src="./images/outofspace.jpg" />
@@ -80,10 +82,10 @@
           </div>
         </li>
         <li>
-          <img src="./images/outofspace.jpg" />
+          <img src="https://source.unsplash.com/dBaz0xhCkPY" />
           <!-- random image -->
           <div
-            class="caption left-align"
+            class="caption center-align"
             style="width: 30%; border-radius: 0.5rem; background: #03000078;"
           >
             <h2>NASA-Developed Ventilator</h2>
@@ -96,7 +98,7 @@
           <img src="https://source.unsplash.com/tW_-BwcVzM0" />
           <!-- random image -->
           <div
-            class="caption right-align"
+            class="caption center-align"
             style="width: 30%; border-radius: 0.5rem; background: #03000078;"
           >
             <h2>Counting Down to Launch America</h2>
@@ -119,7 +121,7 @@
           </div>
         </li>
       </ul>
-    </div>
+    </section>
 
     <!--Cards Sections-->
 
@@ -134,17 +136,26 @@
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4"
-              >Card Title<i class="material-icons right">more_vert</i></span
+              >Bruno-Wan Kenobi<i class="material-icons right"
+                >more_vert</i
+              ></span
             >
-            <p><a href="#">This is a link</a></p>
+            <p>
+              <a
+                href="https://dasilvabrunotexas.github.io/AboutMePage/about.html"
+                >Portfolio</a
+              >
+            </p>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4"
-              >Card Title<i class="material-icons right">close</i></span
+              >Who am I?<i class="material-icons right">close</i></span
             >
             <p>
-              Here is some more information about this product that is only
-              revealed once clicked on.
+              I am a Front-End Developer with Full-Stack exposure. An IT
+              professional with 6 years of experience in different IT-related
+              fields;from Application Support, to server configuration, and Data
+              Analysis
             </p>
           </div>
         </div>
@@ -158,17 +169,23 @@
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4"
-              >Card Title<i class="material-icons right">more_vert</i></span
+              >My Vision Passions<i class="material-icons right"
+                >more_vert</i
+              ></span
             >
-            <p><a href="#">This is a link</a></p>
+            <p><a href="http://www.bruno-dasilva.com/">Portfolio</a></p>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4"
-              >Card Title<i class="material-icons right">close</i></span
+              >My Passions<i class="material-icons right">close</i></span
             >
             <p>
-              Here is some more information about this product that is only
-              revealed once clicked on.
+              I am particularly passionate about my family, well designed, clean
+              coded-front-to-back-web applications, to serve poor communities in
+              my spare time, and to drink coffee. A perfectly accomplished day
+              for me is when I spend some time with my son and wife, I learn
+              something new, and when I debug/develop something awesome, all of
+              this accompanied with a nice warm cup of coffee
             </p>
           </div>
         </div>
@@ -182,17 +199,34 @@
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4"
-              >Card Title<i class="material-icons right">more_vert</i></span
+              >Experience and Life<i class="material-icons right"
+                >more_vert</i
+              ></span
             >
-            <p><a href="#">This is a link</a></p>
+            <p>
+              <a
+                href="https://dasilvabrunotexas.github.io/AboutMePage/about.html"
+                >Projects</a
+              >
+            </p>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4"
-              >Card Title<i class="material-icons right">close</i></span
+              >Experience<i class="material-icons right">close</i></span
             >
             <p>
-              Here is some more information about this product that is only
-              revealed once clicked on.
+              My previous experiences as a full-time missionary and 6+ years in
+              IT application support, not only reflects my passions for
+              technology and care for people but taught me how to approach every
+              situation and individual as unique and how to develop a
+              well-organized strategy to problem solve.
+            </p>
+            <p>
+              I am always searching for self-improvement. So, I completed a
+              24-week, 500-hour full-stack Software Engineering boot camp at
+              General Assembly . It was conducted in a remote setting, providing
+              experience with the latest front- and back-end programming
+              languages, tools, and methodologies.
             </p>
           </div>
         </div>
