added new icon to card and README DEMO

--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4"
-              >Bruno-Wan Kenobi<i class="material-icons right"
-                >more_vert</i
+              >Bruno-Wan Kenobi<i
+                class="small material-icons right blue-grey-text darken-3"
+                >add_circle</i
               ></span
             >
             <p>
@@ -159,6 +160,7 @@
             </p>
           </div>
         </div>
+
         <div class="col s1"></div>
         <div class="card col s3">
           <div class="card-image waves-effect waves-block waves-light section">
@@ -169,8 +171,9 @@
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4"
-              >My Vision Passions<i class="material-icons right"
-                >more_vert</i
+              >My Vision Passions<i
+                class="small material-icons right blue-grey-text darken-3"
+                >add_circle</i
               ></span
             >
             <p><a href="http://www.bruno-dasilva.com/">Portfolio</a></p>
@@ -199,8 +202,9 @@
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4"
-              >Experience and Life<i class="material-icons right"
-                >more_vert</i
+              >Experience and Life<i
+                class="small material-icons right blue-grey-text darken-3"
+                >add_circle</i
               ></span
             >
             <p>
