edit nav href links

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 
             <ul class="right hide-on-med-and-down">
               <li>
-                <a href="sass.html">HOME</a>
+                <a href="#">HOME</a>
               </li>
               <li>
-                <a href="sass.html">ABOUT</a>
+                <a href="#">ABOUT</a>
               </li>
               <li>
-                <a href="sass.html">CONTACT</a>
+                <a href="#">CONTACT</a>
               </li>
               <li>
-                <a href="sass.html"><i class="material-icons">search</i></a>
+                <a href="#"><i class="material-icons">search</i></a>
               </li>
             </ul>
           </div>
