--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
                 <a href="#">HOME</a>
               </li>
               <li>
-                <a href="#">ABOUT</a>
+                <a
+                  href="https://dasilvabrunotexas.github.io/AboutMePage/about.html"
+                  >ABOUT</a
+                >
               </li>
               <li>
-                <a href="#">CONTACT</a>
+                <a href="http://www.bruno-dasilva.com/">CONTACT</a>
               </li>
               <li>
                 <a href="#"><i class="material-icons">search</i></a>
@@ -54,13 +57,18 @@
 
       <ul class="sidenav" id="mobile-nav">
         <li>
-          <a href="sass.html">HOME</a>
+          <a href="#">HOME</a>
         </li>
         <li>
-          <a href="sass.html">ABOUT</a>
+          <a href="https://dasilvabrunotexas.github.io/AboutMePage/about.html"
+            >ABOUT</a
+          >
         </li>
         <li>
-          <a href="sass.html"><i class="material-icons">search</i></a>
+          <a href="http://www.bruno-dasilva.com/">CONTACT</a>
+        </li>
+        <li>
+          <a href="#"><i class="material-icons">search</i></a>
         </li>
       </ul>
     </header>
