changed the navigation leading to the about me

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="navbar-fixed">
       <nav class="blue-grey darken-4">
         <div class="container">
-          <div class="nav-wrapper" style="padding: 5px;">
+          <div class="nav-wrapper" style="padding: 5px">
             <a href="#!" class="brand-logo"
               ><img
                 src="https://res.cloudinary.com/duprwuo4j/image/upload/v1574831158/imgs_starwars/imgs/BLOGO_k36v5y.png"
@@ -40,7 +40,7 @@
               </li>
               <li>
                 <a
-                  href="https://dasilvabrunotexas.github.io/AboutMePage/about.html"
+                  href="https://brunno-dasilva.github.io/AboutMePage/about.html"
                   >ABOUT</a
                 >
               </li>
@@ -81,7 +81,7 @@
           <!-- random image -->
           <div
             class="caption center-align"
-            style="width: 30%; border-radius: 0.5rem; background: #03000078;"
+            style="width: 30%; border-radius: 0.5rem; background: #03000078"
           >
             <h2>NASA’s Swift Mission</h2>
             <h5 class="light grey-text text-lighten-3">
@@ -94,7 +94,7 @@
           <!-- random image -->
           <div
             class="caption center-align"
-            style="width: 30%; border-radius: 0.5rem; background: #03000078;"
+            style="width: 30%; border-radius: 0.5rem; background: #03000078"
           >
             <h2>NASA-Developed Ventilator</h2>
             <h5 class="light grey-text text-lighten-3">
@@ -107,7 +107,7 @@
           <!-- random image -->
           <div
             class="caption center-align"
-            style="width: 30%; border-radius: 0.5rem; background: #03000078;"
+            style="width: 30%; border-radius: 0.5rem; background: #03000078"
           >
             <h2>Counting Down to Launch America</h2>
             <h5 class="light grey-text text-lighten-3">
@@ -120,7 +120,7 @@
           <!-- random image -->
           <div
             class="caption center-align"
-            style="width: 30%; border-radius: 0.5rem; background: #03000078;"
+            style="width: 30%; border-radius: 0.5rem; background: #03000078"
           >
             <h2>NASA Artemis Moon Missions</h2>
             <h5 class="light grey-text text-lighten-3">
